# repro-molts

./: .gitignore  CLAUDE.md  CONTEXT.md  GPT2SanityCheck.md  GPT2SparsityPenalty.md  LossLandscapeExperiment.md  README.md  molt.py  pyproject.toml  requirements.txt  results.json  run_experiment.py  setup.sh  train.py
.claude/: settings.json  settings.local.json
checkpoints/full_N1/: history_N1_lam0.001.json
checkpoints/smoke_test/: history_N1_lam0.001.json
checkpoints/smoke_test_v2/: history_N1_lam0.001.json
checkpoints/smoke_test_v3/: history_N1_lam0.001.json
checkpoints/smoke_test_v4/: history_N1_lam0.001.json
configs/: default.yaml
experiments/: README.md
experiments/01_gemma_sparsity_sweep/: README.md  run.py
experiments/02_activation_sparsity_sweep/: run.py
experiments/03_learned_threshold/: README.md  run.py
experiments/04_gpt2_sanity_check/: run.py
experiments/05_gpt2_sparsity_penalty/: run.py
experiments/06_gemma_relu_vs_jumprelu/: README.md  (+1 more)
molt/: config.py  data.py  eval.py  interpret.py  model.py  train.py
scripts/: compare_baselines.py  eval_molt.py  plot_experiment.py  plot_gate_openness.py  plot_individual_curves.py  plot_sweep_curves.py  plot_training.py  run_activation_sweep.py  run_gemma_relu_vs_jumprelu.py  run_gpt2_sparsity_sweep.py  run_gpt2_surrogate_sweep.py  run_learned_threshold.py  run_model_sweep.py  run_no_sparsity.py  run_single_setup.py  sweep_parallel.py  sweep_sparsity.py  train_molt.py  upload_to_hf.py
tests/: conftest.py  test_config.py  test_data.py  test_eval.py  test_model.py  test_train.py  test_utils.py
(+313 files in other folders)
