[project]
name = "repro-molts"
version = "0.1.0"
description = "Reproducing Anthropic's Sparse Mixtures of Linear Transforms (MOLTs)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.45",
    "datasets>=2.14",
    "wandb",
    "pyyaml",
    "tqdm",
    "matplotlib",
    "safetensors",
    "huggingface-hub",
    "einops>=0.8.2",
    "jaxtyping>=0.3.7",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
interp = ["sae-lens>=4.0", "delphi-ai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/molt"]

[tool.ruff]
src = ["src", "tests", "experiments", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
